fix mobile nav spacing

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -54,7 +54,7 @@
     
     @include breakpoint(md) {
       font-size: .75rem;
-      padding: 1rem;
+      padding: 1rem .5rem;
     }
   }
     
